--- a/ServletTutorial/build.xml
+++ b/ServletTutorial/build.xml
@@ -12,7 +12,7 @@
         <pathelement location="D:/Sudev/Microland/Projects/TestProject/Java/HelloWorldJSP/WebContent/WEB-INF/lib/javax.servlet.jar"/>
     </path>
     <path id="EAR Libraries.libraryclasspath"/>
-    <path id="HelloWorldJSP.classpath">
+    <path id="ServletTutorial.classpath">
         <pathelement location="build/classes"/>
         <path refid="Web App Libraries.libraryclasspath"/>
         <path refid="EAR Libraries.libraryclasspath"/>
@@ -25,7 +25,7 @@
                 <exclude name="**/*.java"/>
             </fileset>
         </copy>
-    	<war destfile="HelloWorldJSP.war"
+    	<war destfile="ServletTutorial.war"
     	    	        basedir="WebContent"
     	    	        needxmlfile="false">
     	    	</war>
@@ -40,7 +40,8 @@
         <echo message="${ant.project.name}: ${ant.file}"/>
         <javac debug="true" debuglevel="${debuglevel}" destdir="build/classes" includeantruntime="false" source="${source}" target="${target}">
             <src path="src"/>
-            <classpath refid="HelloWorldJSP.classpath"/>
+            <classpath refid="ServletTutorial.classpath"/>
+        	<!--<classpath refid="HelloWorldJSP.classpath"/>-->
         </javac>
     </target>
     <target description="Build all projects which reference this project. Useful to propagate changes." name="build-refprojects"/>
