--- a/ServletTutorial/servlettutorial-service.yml
+++ b/ServletTutorial/servlettutorial-service.yml
@@ -2,10 +2,12 @@ kind: Service
 apiVersion: v1
 metadata:
   name: @containername@
+  labels:
+    app: @containername@
 spec:
   selector:
     app: @containername@
   ports:
   - protocol: TCP
-    port: 80
-    targetPort: 80
+    port: 8080
+    targetPort: 8080
