--- a/ServletTutorial/ServletTutorialPackage/values.yaml
+++ b/ServletTutorial/ServletTutorialPackage/values.yaml
@@ -1,4 +1,4 @@
-# Default values for nginx.
+# Default values for containerport.
 # This is a YAML-formatted file.
 # Declare name/value pairs to be passed into your templates.
 
