--- a/ServletTutorial/ServletTutorialPackage/values.yaml
+++ b/ServletTutorial/ServletTutorialPackage/values.yaml
@@ -1,3 +1,4 @@
+# This file contains all dynamic values
 # Default values for containerport.
 # This is a YAML-formatted file.
 # Declare name/value pairs to be passed into your templates.
